--- a/food_delivery/pubspec.yaml
+++ b/food_delivery/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  get: ^4.1.4
+  dots_indicator: ^2.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -62,6 +64,8 @@ flutter:
   assets:
     - assets/image/food1.png
     - assets/image/food2.png
+    - assets/image/food3.png
+    - assets/image/food4.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
