--- a/food_delivery/pubspec.yaml
+++ b/food_delivery/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
   get: ^4.1.4
   dots_indicator: ^2.1.1
+  shared_preferences: ^2.0.11
+  intl: ^0.17.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -67,6 +69,8 @@ flutter:
     - assets/image/food2.png
     - assets/image/food3.png
     - assets/image/food4.png
+    - assets/image/logo.png
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
