--- a/food_delivery/pubspec.yaml
+++ b/food_delivery/pubspec.yaml
@@ -65,9 +65,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/image/food1.png
-    - assets/image/food2.png
-    - assets/image/food3.png
+    - assets/image/twitter.png
+    - assets/image/facebook.png
+    - assets/image/google.png
     - assets/image/food4.png
     - assets/image/logo.png
     - assets/image/empty_cart.png
